Fixed section-features__list on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -70,6 +70,16 @@ body {
 
 
 
+@mixin xxs-screen {
+    @media (max-width: 320px) {
+        @content;
+    }
+}
+@mixin xs-screen {
+    @media (max-width: 440px) {
+        @content;
+    }
+}
 
 @mixin sm-screen {
     @media (max-width: 576px) {
@@ -717,6 +727,12 @@ h5 {
         @include sm-screen(){
             width: 50%;
         }
+       @include xs-screen(){
+           width: 70%;
+       }
+       @include xxs-screen(){
+           width: 90%;
+       }
     }
 
     // .section-features__list-item
